# trimui-smart-pro-build-system

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
cmake/: config.json.in  launch.sh.in
src/: main.cpp
toolchains/: gcc-trimui-x64.cmake
